instructions.Instructions.scala.error
Erreur de compilation :
Instructions:3: error: not found: value haut
haut();
^Instructions:6: error: not found: value bas
bas();
^Instructions:7: error: not found: value bas
bas();
^Instructions:10: error: not found: value haut
haut();
^